update on all files

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,37 @@
 @import "tailwindcss";
+*{
+    --cardPrimary:#1e293b;
+    --buttonPrimary:#3b82f6;
+}
+
+body{
+    color: #f8fafc;
+    background-color: #0f172a;
+}
+
+h1 {
+     text-align: center;
+     padding: calc(var(--spacing) * 5);
+      --tw-font-weight: var(--font-weight-extrabold) /* 800 */;
+    font-weight: var(--font-weight-extrabold) /* 800 */;
+    font-size: var(--text-4xl) /* 2.25rem = 36px */;
+    line-height: var(--tw-leading, var(--text-4xl--line-height) /* calc(2.5 / 2.25) ≈ 1.1111 */);
+}
+h2 {
+    color: 	#94a3b8;
+    font-size: var(--text-3xl) /* 1.875rem = 30px */;
+    line-height: var(--tw-leading, var(--text-3xl--line-height) /* calc(2.25 / 1.875) ≈ 1.2 */);
+}
+p{
+     text-align: center;
+      max-width: var(--container-4xl) /* 56rem = 896px */;
+      margin-inline: auto;
+       --tw-font-weight: var(--font-weight-light) /* 300 */;
+    font-weight: var(--font-weight-light) /* 300 */;
+     color: var(--color-gray-400) /* oklch(70.7% 0.022 261.325) = #99a1af */;
+      padding-top: calc(var(--spacing) * 5) /* 1.25rem = 20px */;
+}
+li{
+   
+
+}
